# cmdagent

./: README.md  pyproject.toml
cmdagent/: agent.py  mcp_api.py  tool_logic.py
docs/: demo.md
examples/: bcftools_view.cwl  bioinfo_question.py  ensembl_symbol.cwl  ncbi_datasets_gene.cwl
tests/: functioncall_test.py  mcp_test.py  test.py
toolagent/: agent.py  remote_api.py
